Funicom-DL Pre 4.0 Dev Change Log:

Funicom-DL.dev.2016-01-20T19_15_00.PST-Pikanet128
	fixed it so --global works
	fixed readme and que to say -G istead of -g
	added info for the command -Q (--quit)

Funicom-DL.dev.2016-01-15T18_11_00.PST-Pikanet128
	lots happend i forget most of it
	from now on my ver of the program is no differnt than yours
	some new things
	the dl screen tell you info
	ex.
		Downloading File:
		    Time     = 1452911953
		    Name     = SWRENGgolqdM0007-720-3500K.mp4
		    Out Path = "C:\Users\ajakethompson\Downloads\TV Shows\Snow White with the R
		               ed Hair\Snow White with the Red Hair\Snow White with the Red Hai
		               r_ Se\"
		    Out Name = "Snow White with the Red Hair; S01E07; null; 60297{Funicom-DL}no
		               ne; (HD).mp4"
	error.log now uses shortform urls and multi lines
	ex.
		funi.com/snow-white-with-the-red-hair/let-me-hear-the-melody-of-your-smile
    			HTTP Error: 404 File "SWRENGgolqdM0007-720-3500K.mp4" Not Found
	HTTP Errors for filedl now goes to the log
	and much more
	also bitratemod is being changed from -B to -b
	as it should never have been capitlized
	for a few vers i will let either work

i missed some updates in here

Funicom-DL.dev.2015-02-17T13_16_51.PST-Pikanet128
	Added User and Pika Tag Exceptions
	User is for you to edit if you want
	Pika is for me to release with ones I find
	if you dont want then delete them
	fixed Movie Suport
	Added Extras Suport (Not Perfect)
	Added -Q or --quit for the que gets its own line it quits the program early
	changed -g to -G or --global
	set default for -G to -l e -fb ((-q best) implyed)
	py file is compiled
	you can change *.pyni to *.py.ini if you want

Funicom-DL.dev.2014-11-22T21_08_00.PST-Pikanet128
	fixed a stupid major bug

Funicom-DL.dev.2014-11-22T20_36_00.PST-Pikanet128
	fixed unicode title chrashes
	turned echo off
	added debug options
	added -fs
	moved the dl def into a def

Funicom-DL.dev.2014-11-17T23_48_00.PST-Pikanet128